<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="AED">AED</string>

    <string name="Download_file">Download file</string>

    <string name="Events">أحداث</string>

    <string name="From_">From:</string>

    <string name="Group_visits">Group Visits</string>

    <string name="To_">To:</string>

    <!-- museums details -->
    <string name="about_museums">About The Museum</string>
    <string name="confirm">Confirm</string>
    <string name="no_event">No Event Found</string>
    <string name="no_museums">No Museums Found</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="about_us">About Us</string>

    <string name="action_settings">Settings</string>

    <string name="add_review">Add Review</string>
    <string name="add_your_review">Rate Your Experience</string>

    <string name="addto_Calender">Mark my calender</string>

    <string name="airports">Airports</string>

    <string name="app_name">SMA</string>

    <string name="arabic">العربيه</string>

    <string name="atm">ATM</string>

    <string name="banks">Banks</string>

    <!--plan_visits-->
    <string name="book_nw2">Book Now </string>
    <string name="book_nw">Book </string>
    <string name="book_store">Book stores</string>

    <string name="bus_station">Bus stations</string>

    <!--nearby-->
    <string name="cafe">cafe</string>

    <string name="closed">Close</string>

    <string name="contact">Contact</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact2">Contact</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="demo">Demo</string>

    <string name="description">Description</string>

    <string name="education">Education</string>

    <string name="email">Email</string>
    <string name="email_hint">Please enter your email</string>

    <string name="english" translatable="false">English</string>

    <string name="entry_fees">Entry Fees</string>

    <string name="failed_send_review">Failed to send Review </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="high_lights">HighLights</string>

    <!--side menu-->
    <string name="home">Home</string>

    <string name="info">Info</string>

    <string name="invalid_email">invalid  email </string>
    <string name="invalid_phone">invalid phone number</string>

    <string name="language">Language</string>

    <string name="loading">Loading .. please wait</string>

    <string name="lorem" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s
    </string>

    <string name="message">Message</string>

    <string name="messeage_hint">please type your messeage </string>

    <string name="mission">Mission</string>

    <string name="name">Name</string>
    <string name="name_hint">please type your name  </string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="near_by_facilities">Nearby Facilities</string>

    <!-- errors-->
    <string name="no_connection">No Connection Now Please try again later</string>
    <!--//messages-->
    <string name="no_notification">You do not have any notifications at this time</string>

    <string name="notifications">Notifications</string>

    <!--titles-->
    <string name="now">Now</string>

    <string name="opened">Open</string>

    <string name="opening_hours">Opening Hours</string>

    <string name="our_facilities">Our Facilities</string>
    <string name="our_museums">Our Museums</string>

    <string name="parkings">Parkings</string>

    <string name="phone">Phone</string>
    <string name="optional">Phone(optional)</string>
    <string name="phone_hint">Please enter your phone number</string>

    <string name="plan_your_visit">Plan Your Visit</string>

    <string name="policy">Policy</string>

    <string name="post">Post</string>

    <string name="rate_error_hint">Please add Rate</string>

    <!--addRate-->
    <string name="rate_your_experience">Rate your experience</string>

    <string name="resturant">Restaurants</string>

    <string name="search">Search</string>

    <string name="send">Send</string>
    <string name="send_messege_fail">Failed to send message</string>
    <string name="send_messege_succsess">Feedback sent successfully</string>

    <string name="setting">الاعدادات</string>

    <string name="sharjah_museums_department">Sharjah Museums Department</string>

    <string name="suggestions">Suggestions</string>

    <string name="success_send_review">Review sent successfully</string>

    <string name="visitors_reviews">visitors Reviews </string>

    <string name="website_hint">Please enter website link</string>

    <string name="welcome">WELCOME</string>

    <string name="tag_color_code" translatable="false">colorCode</string>
    <string name="tag_image" translatable="false">Image</string>
    <string name="tag_musmeum_color" translatable="false">museumColor</string>
    <string name="tag_url" translatable="false">url</string>

    <string name="title_activity_add_review" translatable="false">AddReviewActivity</string>
    <string name="title_activity_highlight_detail">Highlights</string>
    <string name="title_activity_view_location_map" translatable="false">ViewLocationMapActivity</string>
    <string name="title_btn_skip">Skip</string>
    <string name="title_from">From</string>
    <string name="title_share_via">Share via</string>

    <string name="vision">Vision</string>

    <string name="your_email">Your Email</string>
    <string name="title_downloading">Downloading:</string>
    <string name="toast_download_complete">Download Complete</string>
    <string name="title_free">Free</string>
    <string name="toast_evet_expired">This Event has been Expired</string>
    <string name="sharjah_museum_authority">Sharjah Museum Authority</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_to">To</string>
    <string name="duplicate_email">Dublicated email or  email used before</string>
    <string name="no_reviews">You do not have any  visitor reviews at this time</string>
    <string name="title_filter_all">All</string>

    <!--GeoFence-->
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        GeoFence transition error: invalid transition type %1$d
    </string>

    <string name="geofence_transition_entered1">You are</string>
    <string name="geofence_transition_entered2">meters away from</string>
    <string name="geofence_transition_entered3">get directions ?</string>
    <string name="geofence_transition_exited">Exit</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

</resources>
