<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.asgatech.sharjahmuseums.Fragments.ContactInnerFragment">


    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="@dimen/d20"
        android:layout_marginStart="@dimen/d20"
        android:layout_marginTop="40dp"
        android:background="@drawable/event_share_layout_background"
        android:gravity="center|start"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingEnd="5dp"
        android:paddingStart="5dp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="@dimen/d20"
        android:layout_marginStart="@dimen/d20"
        android:layout_marginTop="10dp"
        android:background="@drawable/event_share_layout_background"
        android:gravity="center|start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingEnd="5dp"
        android:paddingStart="5dp" />

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="start|center"
        android:layout_marginEnd="@dimen/d20"
        android:layout_marginStart="@dimen/d20"
        android:layout_marginTop="10dp"
        android:background="@drawable/event_share_layout_background"
        android:gravity="center|start"
        android:hint="@string/optional"
        android:inputType="phone"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/message_et"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="@dimen/d20"
        android:layout_marginStart="@dimen/d20"
        android:layout_marginTop="10dp"
        android:background="@drawable/event_share_layout_background"
        android:gravity="top|start"
        android:hint="@string/message"
        android:inputType="text"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="@dimen/d20"
        android:layout_marginStart="@dimen/d20"
        android:layout_marginTop="@dimen/d36"
        android:background="@drawable/contact_button_green"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/White" />

</LinearLayout>
