<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asgatech.sharjahmuseums.Fragments.NearbyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2.4">

            <LinearLayout
                android:id="@+id/meusems_linear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/musuems_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_our_meusuems_nearby" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/our_museums"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/cafe_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_cafe" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cafe"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10"
                  />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/resturant_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_resturant" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/resturant"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2.4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/atm_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_atm" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/atm"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/banks_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_banks" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/banks"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/book_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_book_store" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/book_store"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2.4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/parkings_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_parking" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/parkings"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/bus_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_bus_station" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/bus_station"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/airport_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_airplan" />

                <com.asgatech.sharjahmuseums.Tools.CustomFonts.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/airports"
                    android:textColor="@color/GrayLight"
                    android:textSize="@dimen/d10" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
